@@ -24,17 +24,6 @@
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep},
     {lib_dir, "."}]},
 
-  % reltool has trouble excluding these automatically
-  {app, cloudi_x_bear, [{incl_cond, exclude}]},
-  {app, cloudi_x_certifi, [{incl_cond, exclude}]},
-  {app, cloudi_x_exometer_core, [{incl_cond, exclude}]},
-  {app, cloudi_x_folsom, [{incl_cond, exclude}]},
-  {app, cloudi_x_hackney, [{incl_cond, exclude}]},
-  {app, cloudi_x_idna, [{incl_cond, exclude}]},
-  {app, cloudi_x_metrics, [{incl_cond, exclude}]},
-  {app, cloudi_x_mimerl, [{incl_cond, exclude}]},
-  {app, cloudi_x_parse_trans, [{incl_cond, exclude}]},
-
   % typical defaults
   {profile, embedded},
   {incl_cond, derived},
